Fix logo margin on mobile

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -957,6 +957,8 @@ p.qa + blockquote {
             line-height: 28px;
             padding: 15px;
             margin-top: 3px;
+            margin-left: 0;
+            margin-right: 0;
 
             .icon-logo:before {
                 content: "\e601";
